# ChatBillingExample

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
src/: database.py
src/api/auth/: dependencies.py  endpoints.py  schemas.py
src/api/chat/: dependencies.py  endpoints.py  schemas.py
src/api/transaction/: endpoints.py  schemas.py
src/api/transactions/: dependencies.py  endpoints.py
src/apps/: backend.py  config.py  llmtest.py
src/apps/database/: database.py
src/apps/database/models/: __init__.py  chat.py  message.py  transactions.py  user.py
src/models/: chat.py  transactions.py  user.py
src/services/: auth.py  billing.py  llm.py  message.py
src/services/auth/: base.py  service.py  userdto.py
src/services/auth/repositories/: in_memory.py  repository.py
src/services/billing/: base.py  service.py  transactiondto.py
src/services/billing/repositories/: in_memory.py  repository.py
src/services/message/: base.py  messagedto.py  service.py
src/services/message/repositories/: in_memory.py  repository.py
